--- a/cmpt350project/www/index.html
+++ b/cmpt350project/www/index.html
@@ -125,7 +125,46 @@
         </div>
         <div data-role="content">
             <ul data-role="listview" data-inset="true" id="resturant2list">
-
+                <li>
+                    <a href="#" data-transition="slide">
+                        <img src="img/r2_1.jpg">
+                        <h4>Great Candian</h4>
+                        <p>Bugers</p>
+                        <p>Price: $ 6.5</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" data-transition="slide">
+                        <img src="img/r2_2.jpg">
+                        <h4>Grilled Chicken</h4>
+                        <p>Chicken</p>
+                        <p>Price: $ 6.8</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" data-transition="slide">
+                        <img src="img/r2_3.jpg">
+                        <h4>Grilled Veggie</h4>
+                        <p>Veggie</p>
+                        <p>Price: $ 6.0</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" data-transition="slide">
+                        <img src="img/r2_4.jpg">
+                        <h4>Grilled Hot Dog</h4>
+                        <p>Hot Dog</p>
+                        <p>Price: $ 4.9</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" data-transition="slide">
+                        <img src="img/r2_5.jpg">
+                        <h4>L'IL Original</h4>
+                        <p>Kids</p>
+                        <p>Price: $ 4.0</p>
+                    </a>
+                </li>
             </ul>
         </div>
         <div data-role="footer" data-position="fixed" data-tap-toggle="false" data-theme="b">
@@ -143,7 +182,22 @@
         </div>
         <div data-role="content">
             <ul data-role="listview" data-inset="true" id="resturant3list">
-
+                <li>
+                    <a href="#" data-transition="slide">
+                        <img src="img/r3_1.png">
+                        <h4>Grilled Chicken</h4>
+                        <p>Pitas</p>
+                        <p>Price: $ 6.5</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" data-transition="slide">
+                        <img src="img/r3_2.png">
+                        <h4>The Chief</h4>
+                        <p>Pitas</p>
+                        <p>Price: $ 5.8</p>
+                    </a>
+                </li>
             </ul>
         </div>
         <div data-role="footer" data-position="fixed" data-tap-toggle="false" data-theme="b">
