--- a/cmpt350project/index.html
+++ b/cmpt350project/index.html
@@ -21,6 +21,7 @@
                 };
 
                 socket.onmessage = function(event) {
+					event.data;
                 };
 
                 socket.onclose = function(event) {
