--- a/cmpt350project/www/index.html
+++ b/cmpt350project/www/index.html
@@ -6,16 +6,7 @@
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.1/jquery.mobile-1.4.1.min.css">
     <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.1/jquery.mobile-1.4.1.min.js"></script>
-    <script>
-        function addToCart(bookName, bookPrice) {
-            //alert(bookName);
-            //alert(bookPrice);
-
-            $('#cart_list').append('<li><a><h4>' + bookName + '</h4><p>' + bookPrice +
-                '</p><a href="#" class="ui-icon-delete" onclick="removeBook()"></a></a></li>');
-            $('#cart_list').listview('refresh');
-        }
-    </script>
+    <script src="js/order.js"></script>
 </head>
 
 <body>
@@ -65,11 +56,12 @@
         <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
             <a href="#" class="ui-btn" data-rel="back">Go Back</a>
             <h1>Umi Sushi</h1>
+            <a href="#shoppingcart" class="ui-btn ui-btn-right">shopping cart</a>
         </div>
         <div data-role="content">
             <ul data-role="listview" data-inset="true" id="resturant1list">
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('UmiSushi', 'Salmon Rose', 6.5)">
                         <img src="img/r1_1.jpg">
                         <h4>Salmon Rose</h4>
                         <p>Sushi</p>
@@ -77,7 +69,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('UmiSushi', 'Crab Sushi', 5.8)">
                         <img src="img/r1_2.jpg">
                         <h4>Crab Sushi</h4>
                         <p>Sushi</p>
@@ -85,7 +77,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('UmiSushi', 'Avocado Handroll', 7.0)">
                         <img src="img/r1_3.jpg">
                         <h4>Avocado Handroll</h4>
                         <p>Handroll</p>
@@ -93,7 +85,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('UmiSushi', 'Chicken Teriyaki', 7.9)">
                         <img src="img/r1_4.jpg">
                         <h4>Chicken Teriyaki</h4>
                         <p>Chicken</p>
@@ -101,7 +93,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('UmiSushi', 'Chicken Udon Soup', 7.0)">
                         <img src="img/r1_5.jpg">
                         <h4>Chicken Udon Soup</h4>
                         <p>Soup</p>
@@ -122,11 +114,12 @@
         <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
             <a href="#" class="ui-btn" data-rel="back">Go Back</a>
             <h1>Harvey's</h1>
+            <a href="#shoppingcart" class="ui-btn ui-btn-right">shopping cart</a>
         </div>
         <div data-role="content">
             <ul data-role="listview" data-inset="true" id="resturant2list">
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('Harveys', 'Great Candian', 6.5)">
                         <img src="img/r2_1.jpg">
                         <h4>Great Candian</h4>
                         <p>Bugers</p>
@@ -134,7 +127,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('Harveys', 'Grilled Chicken', 6.8)">
                         <img src="img/r2_2.jpg">
                         <h4>Grilled Chicken</h4>
                         <p>Chicken</p>
@@ -142,7 +135,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('Harveys', 'Grilled Veggie', 6.0)">
                         <img src="img/r2_3.jpg">
                         <h4>Grilled Veggie</h4>
                         <p>Veggie</p>
@@ -150,7 +143,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('Harveys', 'Grilled Hot Dog', 4.9)">
                         <img src="img/r2_4.jpg">
                         <h4>Grilled Hot Dog</h4>
                         <p>Hot Dog</p>
@@ -158,7 +151,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('Harveys', 'L'IL Origina', 4.0)">
                         <img src="img/r2_5.jpg">
                         <h4>L'IL Original</h4>
                         <p>Kids</p>
@@ -179,11 +172,12 @@
         <div data-role="header" data-position="fixed" data-tap-toggle="false" data-theme="b">
             <a href="#" class="ui-btn" data-rel="back">Go Back</a>
             <h1>Extreme Pita</h1>
+            <a href="#shoppingcart" class="ui-btn ui-btn-right">shopping cart</a>
         </div>
         <div data-role="content">
             <ul data-role="listview" data-inset="true" id="resturant3list">
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('ExtremePita', 'Grilled Chicken', 6.5)">
                         <img src="img/r3_1.png">
                         <h4>Grilled Chicken</h4>
                         <p>Pitas</p>
@@ -191,7 +185,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" data-transition="slide">
+                    <a href="#" onclick="addToCart('ExtremePita', 'The Chief', 6.5)">
                         <img src="img/r3_2.png">
                         <h4>The Chief</h4>
                         <p>Pitas</p>
@@ -246,7 +240,7 @@
                     <label for="phonenum">Phone Number:</label>
                     <input type="text" name="phonenum" id="phonenum">
                 </div>
-                <a href="#" data-role="button">Order</a>
+                <a href="#" data-role="button" onclick="checkOut()">Order</a>
             </form>
         </div>
         <div data-role="footer" data-position="fixed" data-tap-toggle="false" data-theme="b">
